// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing render WeatherData Favorite weather 1`] = `
<div
  className="WeatherData"
>
  <div
    className="WeatherTop"
  >
    <h2>
      Kiev
    </h2>
    <img
      alt=""
      src="http://openweathermap.org/img/wn/09n.png"
    />
    <h1>
      2.98
       ℃
    </h1>
    <button
      className="btn btn-secondary"
      onClick={[Function]}
      type="submit"
    >
      ✖
    </button>
  </div>
  <div
    className="WeatherMain"
  >
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Weather
      </div>
      <div
        className="WeatherValue"
      >
        light intensity drizzle
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Humidity (%)
      </div>
      <div
        className="WeatherValue"
      >
        93
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Pressure (hPa)
      </div>
      <div
        className="WeatherValue"
      >
        1014
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Wind speed (meter/sec)
      </div>
      <div
        className="WeatherValue"
      >
        4
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Longitude 
      </div>
      <div
        className="WeatherValue"
      >
        30.52
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Latitude
      </div>
      <div
        className="WeatherValue"
      >
        50.43
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing render WeatherData Header weather 1`] = `
<div
  className="WeatherData"
>
  <div
    className="WeatherTop"
  >
    <h2>
      Kiev
    </h2>
    <img
      alt=""
      src="http://openweathermap.org/img/wn/09n.png"
    />
    <h1>
      2.98
       ℃
    </h1>
  </div>
  <div
    className="WeatherMain"
  >
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Weather
      </div>
      <div
        className="WeatherValue"
      >
        light intensity drizzle
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Humidity (%)
      </div>
      <div
        className="WeatherValue"
      >
        93
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Pressure (hPa)
      </div>
      <div
        className="WeatherValue"
      >
        1014
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Wind speed (meter/sec)
      </div>
      <div
        className="WeatherValue"
      >
        4
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Longitude 
      </div>
      <div
        className="WeatherValue"
      >
        30.52
      </div>
    </div>
    <div
      className="WeatherMainEl"
    >
      <div
        className="WeatherParam"
      >
        Latitude
      </div>
      <div
        className="WeatherValue"
      >
        50.43
      </div>
    </div>
  </div>
</div>
`;
